# MyJson

./: .gitignore  CMakeLists.txt  Json.cpp  JsonParser.cpp  LICENSE  demo.cpp  readme.md  test.json
include/json/: core.hpp  macro_util.hpp  reflect.hpp  traits.hpp  types.hpp
include/my_json/: core.hpp  macro_util.hpp  reflect.hpp  traits.hpp  types.hpp
test/: test_traits.cpp
